# markdown-ld-kb

./: .gitignore  README.md  deep-research-report-markdown-ld-knowledge-low-cost.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy-swa.yml  kg-build.yml
api/: function_app.py  nl_to_sparql.py  requirements.txt
app/: index.html  staticwebapp.config.json
content/2026/04/: what-is-a-knowledge-graph.md
graph/: README.md  manifest.json
ontology/: context.jsonld  kb.ttl  shapes.ttl
skills/knowledge-graph-mcp/: SKILL.md
skills/knowledge-graph-mcp/references/: api-reference.md
skills/knowledge-graph-mcp/scripts/: server.py
skills/llm-rdf-extraction/: SKILL.md
skills/llm-rdf-extraction/references/: prompt-patterns.md
skills/markdown-ld-authoring/: SKILL.md
skills/markdown-ld-authoring/references/: example-article.md
skills/rdf-jsonld-engineer/: SKILL.md
skills/rdf-jsonld-engineer/references/: context-design.md
skills/shacl-shape-designer/: SKILL.md
skills/shacl-shape-designer/references/: existing-shapes.md
skills/sparql-query-writer/: SKILL.md
skills/sparql-query-writer/references/: vocabulary.md
tests/: test_chunker.py  test_golden.py  test_nl_to_sparql.py  test_postprocess.py  test_shacl.py
tools/: chunker.py  kg_build.py  llm_client.py  postprocess.py  requirements.txt
tools/prompts/: extract_rdf_v1.txt
