[project]
name = "markdown-ld-kb"
version = "0.1.0"
description = "Markdown → Linked Data knowledge bank with serverless SPARQL"
requires-python = ">=3.11"
dependencies = [
    "rdflib>=7.1.1,<8.0",
    "pyshacl>=0.31.0",
    "openai>=1.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
